--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
         <h3 style="text-align:center">Upcoming Events</h3>
         <p>Regularly scheduled events will be highlighted here.</p>
         <p class="w3-opacity">Check out the events page or calendar for more events and details!</p>
-        <button href="calendar" class="w3-button w3-margin-bottom w3-right"><i class="fa fa-calendar"></i> Events Calendar</button>
+        <a href="calendar"><button class="w3-button w3-margin-bottom w3-right"><i class="fa fa-calendar"></i> Events Calendar</button></a>
       </div>
     </div>
   </div>
