--- a/contactus.html
+++ b/contactus.html
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <div class="w3-container w3-margin-top">
     <h3>Contact Greenback Public Library</h3>
     <div class="w3-container w3-margin-top w3-half">
-      <h5>Have a question for the library? You can call us at (865) 856-2841, <a target="_blank" href="mailto:bakerj@loudoncounty-tn.gov">email library director Jordan Baker</a>, or send us a message using our "Ask the Librarian" form.</h5>
+      <h5>Have a question for the library? You can call us at (865) 856-2841, <a target="_blank" href="mailto:bakerj@loudoncounty-tn.gov">email library director Jordan Baker</a>, follow us on <a target="_blank" href="https://www.facebook.com/pages/category/Library/Greenback-Public-Library-526909104146814/">Facebook</a>, or send us a message using our "Ask the Librarian" form.</h5>
       <img class="w3-image w3-hide-small" src="assets/director.jpg" alt="Library" width="1500" height="300">
     </div>
     <div class="w3-container w3-margin-top w3-half">
